<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gmbrAir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/judul"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/gmbrAir"
            android:padding="8dp"
            android:text="@string/judul"
            android:textColor="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <TextView
            android:id="@+id/newsTitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gmbrAir"
            android:padding="8dp"
            android:text="@string/air_mineral"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/subJudul"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:padding="8dp"
            android:text="@string/description" />
    </RelativeLayout>
</android.support.v7.widget.CardView>